# GL2_Cube

./: CMakeLists.txt  GL2Cube.cpp  README.md
includes/GL/: glxew.h.bak
libs/x86_win32/: glew32sd.lib  glfw3.lib
